# htmlificator

./: Cargo.toml  README.md
examples/: sample_generator.rs
src/: element.rs  indentation.rs  lib.rs
tests/: generate.rs
