[package]
name = "htmlificator"
version = "0.2.1"
edition = "2021"
authors = ["IsotoxalDev"]
license = "MIT"
description = "Generate HTML source code through rust functions!"
repository = "https://github.com/IsotoxalDev/htmlificator"
keywords = ["HTML", "Codegen", "Generating"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "sample_generator"
